// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBottomBar is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="aria-label"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium testClass1 testClass2 emotion-euiBottomBar-fixed-m-euiTestCss-euiColorMode-dark-colorClassName"
      data-test-subj="test subject string"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
      Content
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props affordForDisplacement can be false 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props bodyClassName is rendered 1`] = `
<body
  class="customClass"
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props landmarkHeading 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="This should have been label"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        This should have been label
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark called This should have been label with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props paddingSize l is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingLarge emotion-euiBottomBar-fixed-l-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props paddingSize m is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props paddingSize none is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed emotion-euiBottomBar-fixed-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props paddingSize s is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingSmall emotion-euiBottomBar-fixed-s-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props position fixed is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props position props are altered 1`] = `
<body
  class=""
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 30px; right: 30px; bottom: 30px; top: 30px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props position static is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--static euiBottomBar--paddingMedium emotion-euiBottomBar-static-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props position sticky is rendered 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--sticky euiBottomBar--paddingMedium emotion-euiBottomBar-sticky-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props style is customized 1`] = `
<body
  class=""
  style="padding-bottom: 0px;"
>
  <div />
  <div
    class="emotion-euiColorMode-dark-colorClassName"
    data-euiportal="true"
  >
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 12px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;

exports[`EuiBottomBar props usePortal can be false 1`] = `
<body
  style="padding-bottom: 0px;"
>
  <div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium emotion-euiBottomBar-fixed-m-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</body>
`;
